<resources>
    <string name="app_name">Android101</string>
    <string name="menu_tutorial_fab">FAB</string>
    <string name="menu_tutorial_labelledFab">Labelled Fab with Overlay</string>
    <string name="menu_tutorial_rv">Recycler view</string>
    <string name="menu_tutorial_et">EditText Listener</string>
    <string name="menu_tutorial_parcelable">Parcelable Obj Intent</string>
    <string name="menu_tutorial_botNavBar">Bottom Nav Bar</string>
    <string name="menu_tutorial_botNavBarWithFAB">Bottom Nav Bar With FAB</string>
    <string name="menu_tutorial_navDrawer">Navigation Drawer</string>
    <string name="menu_tutorial_navDrawerFrag">Navigation Drawer with Fragmentation</string>
    <string name="menu_tutorial_navDrawerWithBotNavBar">Nav Drawer + Bot Nav Bar</string>
    <string name="menu_tutorial_addMenuItemProgrammatically">Add Menu Item Programmatically</string>
    <string name="menu_tutorial_customDialog">Custom Dialog</string>
    <string name="menu_tutorial_textSpinner">Text Spinner</string>
    <string name="menu_tutorial_sqlite">SQLite</string>
    <string name="menu_tutorial_fragmentWithDialog">Open Dialog in Fragment</string>
    <string name="menu_tutorial_singleton_DB">Singleton DB</string>
    <string name="menu_tutorial_datetimepicker">Datetime Picker</string>
    <string name="menu_tutorial_startActivityForResult">StartActivityForResult</string>
    <string name="menu_tutorial_addLayerDynamically">Add View Dynamically</string>
    <string name="menu_tutorial_swipeWithviewPager">SwipeViews using ViewPager</string>
    <string name="menu_tutorial_calendar">Calendar</string>
    <string name="menu_tutorial_settings">Settings</string>
    <string name="menu_tutorial_colorPicker">Color Picker</string>
    <string name="menu_tutorial_hsvcolorPicker">HSV Color Picker</string>

    <string name="tutorial_fab">Tutorial: Extendable Floating Action Button</string>
    <string name="tutorial_labelledFab">Tutorial: Labelled Floating Action Button with Overlay</string>
    <string name="tutorial_rv">Tutorial: Recycler View Basic</string>
    <string name="tutorial_et">Tutorial: Auto update EditText</string>
    <string name="tutorial_parcelable">Tutorial: Parcelable Class</string>
    <string name="tutorial_botNavBar">Tutorial: Bottom Navigation Bar</string>
    <string name="tutorial_botNavBarWithFab">Tutorial: Bottom Navigation Bar With FAB</string>
    <string name="tutorial_nav_drawer">Tutorial: Navigation Drawer</string>
    <string name="tutorial_nav_drawer_frag">Tutorial: Navigation Drawer with Fragmentation</string>
    <string name="tutorial_navDrawerWithBotNavBar">Tutorial: Navigation Drawer with Bottom Navigation Bar</string>
    <string name="tutorial_addMenuItemProgrammatically">Tutorial: Add Menu Item Programmatically</string>
    <string name="tutorial_customDialog">Tutorial: Custom Dialog</string>
    <string name="tutorial_sqlite">Tutorial: SQLite</string>
    <string name="tutorial_fragmentWithDialog">Tutorial: Open Dialog in Fragment</string>
    <string name="tutorial_singleton_DB_A">Tutorial: Singleton DB - Activity A</string>
    <string name="tutorial_singleton_DB_B">Tutorial: Singleton DB - Activity B</string>
    <string name="tutorial_datetimepicker">Tutorial: Date Time Picker</string>
    <string name="tutorial_startActivityForResult">Tutorial: Start Activity For Result</string>
    <string name="tutorial_addLayerDynamically">Tutorial: Add View Dynamically</string>
    <string name="tutorial_swipeWithviewPager">Tutorial: SwipeViews using ViewPager</string>
    <string name="tutorial_calendar">Tutorial: Calendar</string>
    <string name="tutorial_settings">Tutorial: Settings</string>
    <string name="tutorial_colorPicker">Tutorial: Color Picker</string>
    <string name="tutorial_hsvColorPicker">Tutorial: HSV Color Picker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="calenderViews">
        <item>Daily View</item>
        <item>Weekly View</item>
        <item>Monthly View</item>
        <item>Yearly View</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="monday_letter">Mon</string>
    <string name="tuesday_letter">Tue</string>
    <string name="wednesday_letter">Wed</string>
    <string name="thursday_letter">Thu</string>
    <string name="friday_letter">Fri</string>
    <string name="saturday_letter">Sat</string>
    <string name="sunday_letter">Sun</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
