<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/week_view_holder"
    tools:context=".fragments.CalWeekFragment">

    <RelativeLayout
        android:id="@+id/week_header_wrapper"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/week_letters_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/week_label_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday_letter"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/week_label_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday_letter"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/week_label_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday_letter"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/week_label_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/thursday_letter"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/week_label_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday_letter"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/week_label_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday_letter"
                android:textSize="@dimen/normal_text_size"/>

            <TextView
                android:id="@+id/week_label_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday_letter"
                android:textSize="@dimen/normal_text_size"/>

        </LinearLayout>

    </RelativeLayout>

    <com.learning.android101.views.SyncScrollView
        android:id="@+id/sv_vertical_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/week_header_wrapper"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/week_view_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.learning.android101.views.CalWeekView
                android:id="@+id/week_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/week_view_height"/>

            <LinearLayout
                android:id="@+id/week_columns_wrapper"
                android:layout_width="match_parent"
                android:layout_height="@dimen/week_view_height"
                android:background="@android:color/transparent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/week_column_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:id="@+id/week_column_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:id="@+id/week_column_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:id="@+id/week_column_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:id="@+id/week_column_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:id="@+id/week_column_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <RelativeLayout
                    android:id="@+id/week_column_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

            </LinearLayout>

        </RelativeLayout>

    </com.learning.android101.views.SyncScrollView>

</RelativeLayout>